User can now view an icon based status column in issues (testing only, hidden by default)
- Rewritten column replacement hiding
- Added hidden icon based column with issue statuses

--- a/less/application.less
+++ b/less/application.less
@@ -1,4 +1,5 @@
 @import url(../../../stylesheets/application.css);
+@import 'bootstrap_glyphicons';
 
 html, body, #wrapper { background-color: #112631; height: 100%; }
 #wrapper2 { min-height: 100% }
@@ -25,19 +26,6 @@ h2, h3, h4, .wiki h1, .wiki h2, .wiki h3 { border-bottom: 0px; }
 	font-size: 18px;
 	margin: -20px auto 0;
 	color: #5fbaed;
-
-	.go-to-my-issues {
-		display: none;
-		display: inline-block;
-		width: 105px; margin-left: -240px;
-		text-indent: -9999px;
-	}
-	.go-to-projects {
-		display: none;
-		display: inline-block;
-		width: 125px; margin-right: 10px;
-		text-indent: -9999px;
-	}
 }
 
 /* Menu */
@@ -92,7 +80,7 @@ input[type="button"], input[type="submit"], input[type="reset"] { background-col
 input[type="button"]:hover, input[type="submit"]:hover, input[type="reset"]:hover { background-color: #ccccbb; }
 
 /* Fields */
-input[type="text"], input[type="password"], textarea, select { padding: 2px; border: 1px solid #d7d7d7; font-size: 13px }
+input[type="text"], input[type="password"], textarea, select { padding: 2px; border: 1px solid #d7d7d7; font-size: 12px }
 input[type="text"], input[type="password"] { padding: 3px; }
 input[type="text"]:focus, input[type="password"]:focus, textarea:focus, select:focus { border: 1px solid #888866; }
 option { border-bottom: 1px dotted #d7d7d7; }
